--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4"
+  },
+  "dependencies": {
+    "@flaticon/flaticon-uicons": "^1.7.0",
+    "bootstrap": "^5.2.0-beta1"
   }
 }
